--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-# MCP Server dependencies
-mcp>=0.9.0
+# MCP Server dependencies - install from GitHub
+git+https://github.com/modelcontextprotocol/python-sdk.git
 
 # HTTP client for API requests
 httpx>=0.25.0
